--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
 <h2 class="subtitle"><i class="bi bi-mortarboard"></i>{training}</h2>
 
-<ul id="trainingList">lista</ul>
+<ul>{trainingList}</ul>
 <br>
 <p class="text">{trainingInfo1}</p>
 <p class="text">{trainingInfo2}</p>
@@ -38,10 +38,10 @@
 <h1 class="subtitle"><i class="bi bi-gear"></i>{professionalBackground}</h1>
 
 <h2 class="topic">{professionalBackgroundProject}</h2>
-<ul id="professionalBackgroundProjectList"></ul>
+<ul>{professionalBackgroundProjectList}</ul>
 
 <h2 class="topic">{professionalBackgroundServiceExecution}</h2>
-<ul id="professionalBackgroundServiceExecutionList"></ul>
+<ul>{professionalBackgroundServiceExecutionList}</ul>
 
 </div>
 
@@ -59,7 +59,7 @@
 <nav class="split">
 
 <div class="splitChild">
-<nav id="servicesEngineerSectionList"></nav>
+<nav>{servicesEngineerSectionList}</nav>
 </div>
 
 <div class="splitChild">
@@ -79,10 +79,9 @@
 <p class="text">{servicesDrillingText1}</p>
 <p class="text">{servicesDrillingText2}</p>
 <h2 class="topic">{servicesDrillingTitle}</h2>
-<ul id="servicesDrillingSectionList"></ul>
+<ul>{servicesDrillingSectionList}</ul>
 <p class="text">{servicesDrillingText3}</p>
 </div>
-
 
 </nav>
 </section>
