--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
 <logo><a href=""><img src="{logo}" alt="{logo}"/></a></logo>
-<menu id="menu"></menu>
-<menu id="menuMobile"></menu>
+<menu id="menu">{menu}</menu>
+<menu id="menuMobile">{menuMobile}</menu>
 <button type="button" id="menuMobileBt"> <i class="bi bi-list open" id="menuBtOpen"></i><i class="bi bi-x close" id="menuBtClose"></i> </button>
