--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="pt"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Boscariol Engenharia | Projetos estruturais e geotécnicos</title></head>
+<meta name="description" content="Especialista em concreto, fundações e engenharia geotécnica">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://thiagons21.github.io/boscariol/" />
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -10,7 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="boscariol.css">
 <link rel="shortcut icon" href="fav.png" type="image/x-icon">
-<title>Boscariol Engenharia</title></head>
+
 <body>
 
 <header id="header"></header>
@@ -18,16 +24,16 @@
 <footer id="footer" style="display:none;"></footer>
 
 <script type="text/javascript">
-    window.onload = function(){
-    (function(d, script) {
-    script = d.createElement('script');
-    script.type = 'text/javascript';
-    script.async = true;
-    script.src = 'https://w.app/widget-v1/jINJhu.js';
-    d.getElementsByTagName('head')[0].appendChild(script);
-    }(document));
-    };
-    </script>
+window.onload = function(){
+(function(d, script) {
+script = d.createElement('script');
+script.type = 'text/javascript';
+script.async = true;
+script.src = 'https://w.app/widget-v1/jINJhu.js';
+d.getElementsByTagName('head')[0].appendChild(script);
+}(document));
+};
+</script>
 
 <script src="remCSS.js"></script>
 <script src="componentScript.js"></script>
