--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
 
-<header id="header"></header>
-<main id="main" style="display:none;"></main>
-<footer id="footer" style="display:none;"></footer>
+<header data-comp="url:'header.html',content:'header.json'"></header>
+<main id="main" data-comp="url:'main.html',content:'main.json'" style="display:none;"></main>
+<footer id="footer" data-comp="url:'footer.html',content:'footer.json'" style="display:none;"></footer>
 
 <script type="text/javascript">
 window.onload = function(){
