--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
 
 <header data-comp="url:'header.html',content:'header.json'"></header>
-<main id="main" data-comp="url:'main.html',content:'main.json'" style="display:none;"></main>
-<footer id="footer" data-comp="url:'footer.html',content:'footer.json'" style="display:none;"></footer>
+<main id="main" data-comp="url:'main.html',content:'main.json'" style="display:flex;"></main>
+<footer id="footer" data-comp="url:'footer.html',content:'footer.json'" style="display:flex;"></footer>
 
 <script type="text/javascript">
 window.onload = function(){
